...
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/background_movie_item"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/movies_list_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_guideline">

        <LinearLayout
            android:layout_width="match_parent"
...
